# 3dbag-api

./: .gitignore  3dbag_api.yaml  3dbag_api_merged.yaml  3dbag_api_settings.cfg  3dbag_api_settings_godzilla.cfg  3dbag_api_settings_godzilla_docker.cfg  3dbag_api_settings_local.cfg  AUTHORS  Dockerfile  NOTICE  README.md  main.py  notes.md  pyproject.toml  requirements.txt  start.py  start.sh  start_godzilla_docker.sh
app/: __init__.py  authentication.py  db.py  errors.py  index.py  loading.py  parameters.py  parser.py  transformations.py  views.py
app/schemas/: 3dbagapi_spec.yaml
app/templates/: redoc_ui.html  swagger_ui.html
app/tests/: conftest.py  test_api.py  test_index.py  test_parser.py
data_prepare/: cityjson_to_features.py  count_nginx_3dtiles.py  count_nginx_bandwidth.py  count_nginx_downloads.py  count_nginx_wfs.py  unzip_csv.py
parameters/: bbox-crs.yaml  bbox.yaml  featureId.yaml
profiling/godzilla/: 2022-08-24_9fc10ae4_bbox.pstat  2022-08-24_9fc10ae4_bbox_large.pstat  2022-08-24_9fc10ae4_bbox_verylarge.pstat  2022-08-24_9fc10ae4_features_bbox_large.pstat  2022-08-24_9fc10ae4_features_bbox_verylarge.pstat  2022-08-26_c30c8b72_NL.IMBAG.Pand.1655100000548671-0_surface.pstat
schemas/: 3dbagapi_spec.yaml  3dbagplus_spec.yaml  featureCityJSON.yaml  featureCollection.yaml  featureJSON.yaml  featureJSONAddress.yaml  featureJSONAddressCollection.yaml  featureJSONSurfaces.yaml  link.yaml  numberReturned.yaml
server/: app.py  db.py  index.py  parser.py
test/: conftest.py  test_api.py  test_index.py  test_parser.py  test_transformations.py
(+5 files in other folders)
