[tool.poetry]
name = "3dbag-api"
version = "0.1.0"
description = ""
authors = ["Gina Stavropoulou <gina@Ginas-MacBook-Pro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cjio = "^0.8.1"
Flask = "^2.2.3"
Flask-HTTPAuth = "^4.7.0"
PyYAML = "^6.0"
Flask-SQLAlchemy = "^3.0.3"
shapely = "^2.0.1"
pyproj = "^3.4.1"
psycopg2 = "^2.9.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
isort = "^5.12.0"
pylint = "^2.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
